# UnitGuard

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CMakeBasics.cmake  Config.cmake  Macros.cmake  unitguard-config.cmake.in
docs/: CMakeLists.txt  Doxyfile.in
hostconfigs/LLNL/: ruby-clang-14.cmake  ruby-gcc.cmake
scripts/: config-build.py
src/: CMakeLists.txt  ConstexprAlgorithms.hpp  Quantity.hpp  Unit.hpp  UnitGuard.hpp
src/unitTests/: CMakeLists.txt  testConstexprAlgorithms.cpp  testUnitGuard.cpp
